# Helm

./: .gitignore  README.md  helm_architecture.html
.github/workflows/: helm-merge-conflict.yml  overlord-merge-conflict.yml
agent_docs/: PRD.md  feature-2-demo.md
helm/: .env.example  AGENTS.md  Dockerfile  README.md  pytest.ini  requirements.txt
helm/agentcore/: agentcore.json  iam-runtime-bedrock-marketplace.json
helm/backend/: helm.py  helm_prompt.py  main.py  models.py
helm/benchmarks/: collector.py  git_worktree.py  manifest.py  report.py
helm/docs/: AWS_SETUP.md  DEMO_JUDGES.md  REAL_AGENT_BENCHMARK.md  STACK_FLOWCHART_SOURCE.md
helm/experiments/: CONTENTION_DEEP_DIVE.md  CONTENTION_SWEEP_20260517.md  EXPERIMENT_RESULTS.md  LIVE_MATRIX_BENCHMARK.md  README.md  SHOPFIX_BENCHMARK.md  SHOPFIX_DEMO_PREP.md  SHOPFIX_GUARDRAIL_RESULTS.md  SHOPFIX_LIVE_RESULTS.md  SHOPFIX_MERGE_FLEET_RESULTS.md  metrics.py  runner.py
helm/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
helm/mcp/: server.py
helm/scripts/: benchmark_helm_tokens.py  benchmark_static_site_generation.py  bootstrap_agentcore.py  bootstrap_venv.sh  collect_streamcast_run.py  compare_merge_scenarios.py  demo_github_delegation.sh  demo_github_multi_machine.sh  demo_multi_machine.sh  e2e_agentic_demo.sh  (+22 more)
overlord/: .env.example  README.md  pytest.ini  requirements.txt
overlord/agentcore/arbitrator/: README.md  main.py  pyproject.toml  runtime_logic.py  sample_invoke_payload.json
shopfix/: .gitignore  README.md
streamcast/: README.md  requirements.txt
(+585 files in other folders)
