[project]
name = "overlord-arbitrator-runtime"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=0.0.1",
    "boto3>=1.35.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "eval-type-backport>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
